SOUR-124 fix search components aligment: wrap all filters into one section, add grid to filters section

--- a/src/components/SearchSection/SearchBar/search-bar.scss
+++ b/src/components/SearchSection/SearchBar/search-bar.scss
@@ -9,7 +9,7 @@
     border: 1px solid $color-ghost;
     border-radius: 5px;
     display: flex;
-    flex-grow: 1;
+    grid-row-start: 2;
     padding: 13px 16px;
     position: relative;
 
